--- a/index.html
+++ b/index.html
@@ -9,5 +9,36 @@
 </head>
 <body>
 
+<style>
+
+    .table{
+        border-collapse: collapse;
+    }
+
+    .table-cell{
+        width: 40px;
+        height: 40px;
+        border: 1px solid #000;
+    }
+
+    .highlighted{
+        background-color: blue;
+        cursor: pointer;
+    }
+
+    .userScored{
+        background-color: green;
+    }
+
+    .pcSelect{
+        background-color: red;
+    }
+</style>
+
+<div id="root">
+
+</div>
+
+<script src="js/script.js"></script>
 </body>
 </html>
